# recorder

./: .gitignore  CMakeLists.txt  DELIVERABLES.txt  README.md
docs/: PRODUCT_SPEC.md  ROADMAP.md
src/: DeviceEnumerator.cpp  DeviceEnumerator.h  GuiApp.cpp  GuiApp.rc  HResultUtils.cpp  HResultUtils.h  Logger.cpp  Logger.h  LoopbackRecorder.cpp  LoopbackRecorder.h  MediaFoundationPlayer.cpp  MediaFoundationPlayer.h  Mp3Converter.cpp  Mp3Converter.h  RecordingUtils.cpp  RecordingUtils.h  SegmentNaming.cpp  SegmentNaming.h  SpscByteRing.h  WavWriter.cpp  WavWriter.h  main.cpp  resource.h
